# its_on

./: .dockerignore  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .mdlrc.rb  .pdm-python  .travis.yml  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  server.py  settings.yaml  setup.cfg
.github/workflows/: build.yml  build_pr.yml  publish.yml
auth/: auth.py  decorators.py  enums.py  keycloak.py  models.py  schemes.py  utils.py  views.py
db/migrations/: env.py
db/migrations/versions/: 1510fb99ed70_.py  20ce9b327cdb_add_m2m_relation_to_manage_user_switches.py  49e21e1bb766_set_default_ttl.py  4f13ecf8ddfd_set_is_hidden_false.py  58df78852dc7_added_ttl_and_jira_ticket_fields_to_.py  63454ba6d6f9_.py  667cfa92dfd5_merge.py  6e0daa4be1f8_create_auth_tables.py  7fb20e27a402_add_groups_column.py  8fddaf01c35a_added_is_hidden_column.py  91cc2dd4ae43_remove_jira_ticket_field.py  94ccd671cbcd_add_created_at_and_updated_at.py  b85b82664c28_added_switch_history.py  cb42b1c187d9_.py  f3cd679c723f_add_deleted_at.py  f5a2fe518eae_.py
its_on/: __main__.py  app_keys.py  cache.py  config.py  constants.py  db.py  db_utils.py  enums.py  main.py  middlewares.py  models.py  probes.py  routes.py  schemes.py  settings.py  utils.py  views.py
its_on/admin/: mixins.py  permissions.py  schemes.py  utils.py  views.py
its_on/admin/views/: query_utils.py  switches.py  users.py
its_on/static/css/: style.css
its_on/templates/: add.html  base.html  detail.html  index.html  login.html
its_on/templates/switches/: add.html  detail.html  error.html  index.html
its_on/templates/users/: detail.html  list.html  login.html
scripts/: create_user.py  run_mypy.py
settings/: .env.example  dev.env  prod.env  staging.env  test.env
tests/: conftest.py  helpers.py  test_admin.py  test_api_switch.py  test_auth.py  test_probes.py  test_script.py  test_user_switches_edit.py  test_utils.py
