[project]
name = "its_on"
version = "0.1.0"
description = "Flag/feature toggle service, written in aiohttp."
authors = [
    {name = "Luchi Insurance JSC", email = "info@luchi.ru"},
]
dependencies = [
    "aiohttp==3.13.3",
    "aiohttp-apispec==2.2.3",
    "aiohttp-cors==0.8.1",
    "aiohttp-jinja2==1.6",
    "aiohttp-security==0.5.0",
    "aiohttp-session==2.12.1",
    "aiohttp-oauth2==0.0.5",
    "aiodns==4.0.0",
    "aiopg==1.4.0",
    "redis==7.4.0",
    "anybadge==1.16.0",
    "sqlalchemy==1.4.54",
    "alembic==1.18.4",
    "aiocache[redis]==0.12.3",
    "dynaconf[yaml]==3.2.13",
    "webargs==5.5.3",
    "marshmallow==3.26.2",
    "passlib==1.7.4",
    "gunicorn==25.3.0",
    "uvloop==0.22.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Trade Secret License"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest-cov==2.8.1",
    "pytest-aiohttp==1.1.0",
    "pytest-mock==3.1.0",
    "pytest-freezegun==0.4.2",
    "factory-boy==3.2.0",
    "pydocstyle==3.0.0",
    "flake8==3.9.0",
    "flake8-blind-except==0.1.1",
    "flake8-bugbear==19.3.0",
    "flake8-builtins==1.4.1",
    "flake8-commas==2.0.0",
    "flake8-comprehensions==2.1.0",
    "flake8-debugger==3.1.0",
    "flake8-docstrings==1.3.0",
    "flake8-polyfill==1.0.2",
    "flake8-print==3.1.0",
    "flake8-quotes==3.0.0",
    "flake8-string-format==0.2.3",
    "flake8-todo==0.7",
    "flake8-annotations-complexity==0.0.6",
    "flake8-variables-names==0.0.2",
    "flake8-class-attributes-order==0.1.2",
    "flake8-broken-line==0.1.0",
    "mypy==1.19.1",
    "typing-extensions==4.15.0",
    "pep8-naming==0.7.0",
    "rozental-as-a-service==1.1.2",
    "click==8.3.1",
    "freezegun==0.3.15",
]
darwin = [
    "appnope==0.1.3; sys_platform == \"darwin\"",
]

[tool.pdm]
distribution = false

[tool.pdm.resolution]
respect-source-order = true
